    `CELERYBEAT_LOG_LEVEL`                 ``celerybeat --loglevel=``
    `CELERYBEAT_LOG_FILE`                  ``celerybeat --logfile=``
    `CELERYMON_LOG_LEVEL`                  ``celerymon --loglevel=``
    `CELERYMON_LOG_FILE`                   ``celerymon --logfile=``
    =====================================  ===================================

.. _v240-news:

News
----

* Broker transports can be now be specified using URLs

    The broker hostname can now be given as an URL instead, of the format::

        transport://user:password@hostname:port/virtual_host

    for example the default broker is written as::

        amqp://guest:guest@localhost:5672//

    Transport defaults to amqp, and is not required.
    user, password, port and virtual_host is also not mandatory and
    will default to the corresponding transport default.

    .. note::

        Note that the path component (virtual_host) always starts with a
        forward-slash.  This is necessary to distinguish between the virtual
        host '' (empty) and '/', which are both acceptable virtual host names.

        A virtual host of '/' becomes:

            amqp://guest:guest@localhost:5672//

        and a virtual host of '' (empty) becomes::

            amqp://guest:guest@localhost:5672/

        So the leading slash in the path component is **always required**.

   In addition the :setting:`BROKER_URL` setting has been added as an alias
   to ``BROKER_HOST``.  Any broker setting specified in both the URL and in
   the configuration will be ignored, if a setting is not provided in the URL
   then the value from the configuration will be used as default.

   Also, programs now support the :option:`-b|--broker` option to specify
   a broker URL on the command line::

        $ celeryd -b redis://localhost

        $ celeryctl -b amqp://guest:guest@localhost//e

    The environment variable :envvar:`CELERY_BROKER_URL` can also be used to
    easily override the default broker used.
