@@ -2,7 +2,6 @@ from datetime import datetime, timedelta
 from functools import wraps
 
 from mock import Mock
-from pyparsing import ParseException
 
 from celery import task
 from celery.app import app_or_default
@@ -10,7 +9,7 @@ from celery.task import task as task_dec
 from celery.exceptions import RetryTaskError
 from celery.execute import send_task
 from celery.result import EagerResult
-from celery.schedules import crontab, crontab_parser
+from celery.schedules import crontab, crontab_parser, ParseException
 from celery.utils import uuid
 from celery.utils.timeutils import parse_iso8601
 
