@@ -1,4 +1,3 @@
 python-dateutil>=1.5.0,<2.0.0
 anyjson>=0.3.1
 kombu>=1.3.1,<2.0.0
-pyparsing>=1.5.0,<2.0.0
