@@ -45,4 +45,3 @@ requires = uuid
            python-dateutil >= 1.5.0
            anyjson >= 0.3.1
            kombu >= 1.3.1
-           pyparsing >= 1.5.0
